--- a/options.html
+++ b/options.html
@@ -101,7 +101,7 @@
 
     <fieldset>
       <legend>Whitelabeled hostnames:</legend>
-      <span class="detail">use full hostnames (i.e. na1.analytics.example.com)</span><br>
+      <span class="detail">use full hostnames (i.e. na1.analytics.example.com) or Regular Expressions (i.e. .*\.example\.com)</span><br>
       <input type="text" id="add_wl_domain">
       <input type="button" id="add_wl" value="Add new">
       <br>
@@ -121,6 +121,7 @@
           <a id="magic_validate" href="#">Validation</a>
           <a id="magic_clone" href="#">Clone project</a>
           <a id="magic_params" href="#">ETL Params</a>
+          <a id="magic_add" href="#">Automated Data Distribution</a>
         </div>
         <br>
         <label for="magic_title">Title: </label><input type="text" id="magic_title" maxlength="5"><br>
