--- a/gdpopup.html
+++ b/gdpopup.html
@@ -58,7 +58,7 @@
       <!--a class="needpid" href="${WEBDAV_PATH}" id="data" title="Go to project-specific WebDav directory">Data</a-->
       <a class="needpid" href="https://${SERVER}/gdc/dataload/projects/${PID}/outputStage/" id="data" title="Setup Database Output Stage">DB</a>
       <a class="needpid" href="https://${SERVER}/gdc/projects/${PID}/dataload/processes" id="transformations" title="ETL processes within a project">ETL</a>
-      <a class="needpid" href="https://${SERVER}/admin/disc/#/projects/${PID}" id="schedules" title="ETL Schedules within a project">Sch</a><sub><a class="needpid subnav" href="https://${SERVER}/gdc/projects/${PID}/schedules" id="schedules_gp" title="ETL Schedules within a project (show in Gray Pages)">GP</a></sub>
+      <a class="needpid" href="https://${SERVER}/admin/disc/#/projects/${PID}" id="schedules" title="ETL Schedules within a project">Sch</a><sub><a class="needpid subnav" href="https://${SERVER}/gdc/projects/${PID}/schedules/${SCHEDULE}" id="schedules_gp" title="Selected Schedule in Gray Pages. If nothing is selected show all schedules in Project">GP</a></sub>
 </span>      
       <span class="spacer" id="last-spacer"></span>
       <a class="needpid" href="#" id="something" title="Useful Project Information">i</a>
