--- a/gdpopup.html
+++ b/gdpopup.html
@@ -56,7 +56,7 @@
       <a class="needpid" href="https://${SERVER}/gdc/md/${PID}/maintenance/import" id="import" title="Import previously exported project to blank project">Imp</a><sub><a class="needpid subnav" href="https://${SERVER}/gdc/md/${PID}/maintenance/partialmdimport" id="md_import" title="Import previously exported dashboard/metric/report">MD</a></sub>
       <span class="spacer"></span>  
       <!--a class="needpid" href="${WEBDAV_PATH}" id="data" title="Go to project-specific WebDav directory">Data</a-->
-      <a class="needpid" href="https://${SERVER}/gdc/dataload/projects/${PID}/outputStage/" id="data" title="Setup Database Output Stage">DB</a>
+      <a class="needpid" href="https://${SERVER}/gdc/dataload/projects/${PID}/outputStage/" id="data" title="Setup ADS Output Stage">OS</a>
       <a class="needpid" href="https://${SERVER}/gdc/projects/${PID}/dataload/processes" id="transformations" title="ETL processes within a project">ETL</a>
       <a class="needpid" href="https://${SERVER}/admin/disc/#/projects/${PID}" id="schedules" title="ETL Schedules within a project">Sch</a><sub><a class="needpid subnav" href="https://${SERVER}/gdc/projects/${PID}/schedules/${SCHEDULE}" id="schedules_gp" title="Selected Schedule in Gray Pages. If nothing is selected show all schedules in Project">GP</a></sub>
 </span>      
